# openstack-ansible-os_monasca-agent

./: .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.md  README.rst  setup.cfg  test-requirements.txt  tox.ini
dashboards/: containers_dashboard.json  hosts_dashboard.json  infra_dashboard.json  instances_dashboard.json
defaults/: main.yml
doc/: Makefile
doc/source/: conf.py  configure-monasca-agent.rst  index.rst
examples/: os-monasca-agent.yml  playbook.yml
extras/: os-monasca-agent-install.yml  os-monasca-agent-install.yml-r  user_secrets.yml
extras/group_vars/: all.yml
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: main.yml  main.yml-r  monasca_agent_init_systemd.yml  monasca_agent_install.yml  monasca_agent_post_install.yml  monasca_agent_pre_install.yml
templates/: .apache.cnf.j2  .my.cnf.j2  .rabbitmq.cnf.j2  agent.yaml.j2  host_alive.yaml.j2  monasca-agent-systemd-init.j2  monasca-agent-systemd-tmpfiles.j2  monasca-reconfigure.j2  supervisor.conf.j2
templates/conf.d/: apache.yaml.j2  ceph.yaml.j2  cpu.yaml.j2  crash.yaml.j2  disk.yaml.j2  haproxy.yaml.j2  host_alive.yaml.j2  http_check.yaml.j2  kafka_consumer.yaml.j2  libvirt.yaml.j2  load.yaml.j2  mcache.yaml.j2  memory.yaml.j2  mysql.yaml.j2  network.yaml.j2  ntp.yaml.j2  postfix.yaml.j2  process.yaml.j2  rabbitmq.yaml.j2  zk.yaml.j2  (+1 more)
tests/: ansible-role-requirements.yml  inventory  os_monasca-agent-overrides.yml  test-install-monasca-agent.yml  test.yml  tests-repo-clone.sh
vars/: redhat-7.yml  suse.yml  ubuntu-16.04.yml  ubuntu.yml
zuul.d/: project.yaml
(+1 files in other folders)
